--- a/Restaurant/Restaurant/Views/Shared/_Layout.cshtml
+++ b/Restaurant/Restaurant/Views/Shared/_Layout.cshtml
@@ -7,6 +7,11 @@
   <link rel="stylesheet" href="~/Content/site.css" />
   <link rel="stylesheet" href="~/Content/bootstrap.css" />
   <link rel="stylesheet" href="~/Content/bootstrap-theme.css" />
+  <link rel="stylesheet" href="~/menu.css" />
+  
+  <script src="~/Scripts/jquery-1.9.1.js"></script>
+  <script src="~/Scripts/bootstrap.js"></script>
+  <script src="~/Scripts/site.js" ></script>
 </head>
 <body>
 <div class="navbar navbar-inverse navbar-fixed-top">
@@ -23,8 +28,8 @@
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>@Html.ActionLink("Home", "Index", "Home")</li>
-        <li>@Html.ActionLink("About", "About", "Home")</li>
-        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+        <li>@Html.ActionLink("Menu", "Menu", "Home")</li>
+        <li>@Html.ActionLink("GetItems - Json", "GetItems", "Home")</li>
       </ul>
     </div>
   </div>
@@ -33,15 +38,9 @@
   @RenderBody()
   <hr />
   <footer>
-    <p>&copy; 2016 - Restaurant</p>
+    <p>&copy; 2018 - Restaurant</p>
   </footer>
 </div>
-
-<environment names="Development">
-  <script src="~/Scripts/jquery-1.9.1.js"></script>
-  <script src="~/Scripts/bootstrap.js"></script>
-  <script src="~/Scripts/site.js" ></script>
-</environment>
 
 @RenderSection("scripts", required: false)
 </body>
