--- a/Restaurant/Restaurant/Views/Shared/_Layout.cshtml
+++ b/Restaurant/Restaurant/Views/Shared/_Layout.cshtml
@@ -27,8 +27,22 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li>@Html.ActionLink("Home", "Index", "Home")</li>
         <li>@Html.ActionLink("Menu", "Menu", "Home")</li>
+        @if (Request.IsAuthenticated)
+        {
+          <li class="nav-item">
+            @Html.ActionLink("Logout", "Logout", "Account", new { area = "" }, new { @class = "nav-link" })
+          </li>
+          <li class="nav-item">
+            @Html.ActionLink("Dishes", "Index", "Dishes", new { area = "" }, new { @class = "nav-link" })
+          </li>
+        }
+        @if (!Request.IsAuthenticated)
+        {
+          <li class="nav-item">
+            @Html.ActionLink("Login", "Index", "Account", new { area = "" }, new { @class = "nav-link" })
+          </li>
+        }
         <li>@Html.ActionLink("GetItems - Json", "GetItems", "Home")</li>
       </ul>
     </div>
