--- a/Restaurant/Restaurant/menu.css
+++ b/Restaurant/Restaurant/menu.css
@@ -1,57 +1,63 @@
-body{
+body {
 
 }
-.menuWrapper{
-    padding:30px;
-    background:#fff;
-    float:left;
-    width:80%;
-    box-sizing:border-box;
-    margin:10%;
+
+.menuWrapper {
+    padding: 10px;
+    background: #fff;
+    float: left;
+    width: 80%;
+    /*box-sizing: border-box;*/
+    margin: 10%;
     box-shadow: 0 1.5em 85px 0 rgba(0, 0, 0, 0.2);
 }
-.menuWrapper h1{
-    font-family:'Open-sans',Arial,sans-serif;
+
+.menuWrapper h1 {
+    font-family: 'Open-sans', Arial, sans-serif;
 }
-.menuItem{
-    float:left;
-    display:block;
-    width:100%;
+
+.menuItem {
+    float: left;
+    display: block;
+    width: 100%;
     box-sizing: border-box;
-    font-family:'Open-sans',Arial,sans-serif;
+    font-family: 'Open-sans', Arial, sans-serif;
 }
-.menuItemHeading{
-    cursor:pointer;
-    margin:0px 0px 10px 0px;
-    padding:10px;
-    background:#2980b9;
-    color:#fff;
-    width:100%;
+
+.menuItemHeading {
+    cursor: pointer;
+    margin: 0px 0px 10px 0px;
+    padding: 10px;
+    background: #2980b9;
+    color: #fff;
+    width: 100%;
     border-radius: 3px;
     box-sizing: border-box;
 }
-.close .menuItemContent{
-    height:0px;
-    transition:height 1s ease-out;
-	transform: scaleY(0);
-    float:left;
-    display:block;  
+
+.close .menuItemContent {
+    height: 0px;
+    transition: height 1s ease-out;
+    transform: scaleY(0);
+    float: left;
+    display: block;
 }
-.open .menuItemContent{
+
+.open .menuItemContent {
     padding: 20px;
     background-color: #fff;
     border: 1px solid #ddd;
     width: 100%;
     margin: 0px 0px 10px 0px;
-    display:block;
-	transform: scaleY(1);
-	transform-origin: top;
-	transition: transform 0.4s ease;
+    display: block;
+    transform: scaleY(1);
+    transform-origin: top;
+    transition: transform 0.4s ease;
     box-sizing: border-box;
 }
 
-.open .menuItemHeading{
-    margin:0px;
+.open .menuItemHeading {
+    margin: 0px;
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
     border-bottom-right-radius: 0px;
