--- a/07 Project/Restaurant/Views/Shared/_Layout.cshtml
+++ b/07 Project/Restaurant/Views/Shared/_Layout.cshtml
@@ -1,13 +1,14 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"] - WebApplication</title>
-    <link rel="stylesheet" href="~/Content/site.css" />
-    <link rel="stylesheet" href="~/Content/bootstrap.css" />
-    <link rel="stylesheet" href="~/Content/bootstrap-theme.css" />
-    <link rel="stylesheet" href="~/menu.css" />
+    <link rel="stylesheet" href="~/Content/site.css"/>
+    <link rel="stylesheet" href="~/Content/bootstrap.css"/>
+    <link rel="stylesheet" href="~/Content/bootstrap-theme.css"/>
+    <link rel="stylesheet" href="~/menu.css"/>
 
     <script src="~/Scripts/jquery-3.3.1.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
@@ -15,44 +16,50 @@
 
     <script src="~/Scripts/bootstrap.js"></script>
 </head>
+
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            @Html.ActionLink("Restaurant", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
+<header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+        @Html.ActionLink("Restaurant", "Index", "Home", new {area = ""}, new {@class = "navbar-brand"})
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mr-auto">
+                <li class="navbar-nav">
+                    @Html.ActionLink("Menu", "Index", "Menu", new {area = ""}, new {@class = "nav-link"})
+                </li>
+                @if (Request.IsAuthenticated)
+                {
                     <li class="nav-item">
-                        @Html.ActionLink("Menu", "Index", "Menu", new { area = "" }, new { @class = "nav-link" })
+                        @Html.ActionLink("Logout", "Logout", "Login", new {area = ""}, new {@class = "nav-link"})
                     </li>
-                    @if (Request.IsAuthenticated)
-                    {
-                        <li class="nav-item">
-                            @Html.ActionLink("Logout", "Logout", "Login", new { area = "" }, new { @class = "nav-link" })
-                        </li>
-                        <li class="nav-item">
-                            @Html.ActionLink("Dishes", "Index", "Dishes", new { area = "" }, new { @class = "nav-link" })
-                        </li>
-                    }
-                    @if (!Request.IsAuthenticated)
-                    {
-                        <li class="nav-item">
-                            @Html.ActionLink("Login", "Index", "Login", new { area = "" }, new { @class = "nav-link" })
-                        </li>
-                    }
                     <li class="nav-item">
-                        @Html.ActionLink("Json", "Get", "Items", new { area = "" }, new { @class = "nav-link" })
+                        @Html.ActionLink("Dishes", "Index", "Dishes", new {area = ""}, new {@class = "nav-link"})
                     </li>
-                </ul>
-            </div>
-        </nav>
-    </header><br>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; 2018 - Restaurant</p>
-        </footer>
-    </div>
+                }
+                @if (!Request.IsAuthenticated)
+                {
+                    <li class="nav-item">
+                        @Html.ActionLink("Login", "Index", "Login", new {area = ""}, new {@class = "nav-link"})
+                    </li>
+                }
+                <li class="nav-item">
+                    @Html.ActionLink("Json", "Get", "Items", new {area = ""}, new {@class = "nav-link"})
+                </li>
+            </ul>
+        </div>
+    </nav>
+</header><br>
+<div class="container body-content">
+    @RenderBody()
+    <hr/>
+    <footer>
+        <p>&copy; 2018 - Restaurant</p>
+    </footer>
+</div>
 
 </body>
+
 </html>
